# externaldotapatcher

./: .gitignore  CMakeLists.txt  README.md  app.manifest  build.bat  build_gcc.bat  camera_patch.vcxproj
core/: autoaccept.cpp  autoaccept.hpp  context.hpp  dota_sdk.hpp  main.cpp  memory.cpp  memory.hpp  patterns.hpp
